syntax = "proto3";

package auth;

service AuthGrpcService {
  rpc Hello (HelloName) returns (HelloReturn) {}
  rpc SignUpWithEmail (SignUpWithEmailRequest) returns (SignUpWithEmailReturn) {}
  rpc SignInWithEmail (SignUpWithEmailRequest) returns (SignUpWithEmailReturn) {}
  rpc SignUpWithPhoneNumber (SignUpWithPhoneNumberRequest) returns (SignUpWithPhoneNumberReturn) {}
}

message HelloName {
  string helloName = 1;
}

message HelloReturn {
  string helloReturn = 1;
}

message SignUpWithEmailRequest {
  string email = 1;
  string password = 2;
}

message SignUpWithEmailReturn {
  string accessToken = 1;
}

message SignUpWithPhoneNumberRequest {
  string accessToken = 1;
}

message SignUpWithPhoneNumberReturn {
  string accessToken = 1;
}